# tanabata

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile  README.md  _config.yml  build.sh  docker-compose.yml  main.c  openapi.yaml
.gitea/workflows/: deploy.yml
backend/: go.mod  go.sum
backend/cmd/dedup/: main.go
backend/cmd/server/: main.go
backend/internal/config/: config.go  config_test.go
backend/internal/db/: db.go
backend/internal/domain/: acl.go  audit.go  category.go  context.go  duplicate.go  errors.go  file.go  pool.go  tag.go  user.go
backend/internal/handler/: acl_handler.go  audit_handler.go  auth_handler.go  category_handler.go  duplicate_handler.go  file_handler.go  middleware.go  pool_handler.go  ratelimit.go  response.go  router.go  router_test.go  static.go  tag_handler.go  user_handler.go
backend/internal/imagehash/: imagehash.go  imagehash_test.go
backend/internal/integration/: server_test.go
backend/internal/port/: repository.go  storage.go
backend/internal/service/: acl_service.go  audit_service.go  auth_service.go  auth_service_test.go  category_service.go  duplicate_index.go  duplicate_service.go  duplicate_test.go  file_service.go  metadata.go  metadata_test.go  pool_service.go  tag_service.go  (+1 more)
backend/migrations/: 001_init.sql  001_init_schemas.sql  002_core_tables.sql  003_data_tables.sql  004_acl_tables.sql  005_activity_tables.sql  006_indexes.sql  007_seed_data.sql  embed.go
cgi/: cgi.c
cli/: cli.c
core/: sappyou.c  sasahyou.c  shoppyou.c
docs/: ARCHITECTURE.md  DEPLOY.md  FRONTEND_STRUCTURE.md  GO_PROJECT_STRUCTURE.md  REQUIREMENTS.md  fm.md  Описание.md
docs/reference/: schema.sql
frontend/: .prettierignore  README.md  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite-mock-plugin.ts  vite.config.ts
frontend/src/: app.css  app.d.ts  app.html  service-worker.ts
frontend/static/: manifest.webmanifest
include/: cli.h  constants.h  core.h  core_func.h  tanabata.h  tdbms-client.h  tdbms.h
lib/: database.c  kazari.c  sasa.c  tanzaku.c
scripts/migrate-legacy/: README.md  migrate.sh  transform.sql
src/: cli.c
src/core/: sappyou.c  sasahyou.c  shoppyou.c
src/tanabata/: database.c  kazari.c  sasa.c  tanzaku.c
tanabata/core/: core_func.h  sappyou.c  sasahyou.c  shoppyou.c
tanabata/lib/: database.c  kazari.c  sasa.c  tanzaku.c
tdbms/: install.sh  tdbms.service
tdbms/cli/: tdbms-cli.c
tdbms/client/: tdbms-client.c
tdbms/server/: tdbms-server.c
tfm/cli/: tfm-cli.c
web/: install.sh  tdbms-client.go  web-server.go
web/public/: auth.html  browserconfig.xml  index.html  tanabata.webmanifest  tfm.html
web/server/: go.mod  tdbms-client.go  tweb.service  web-server.go
(+151 files in other folders)
